--- a/stuff/embed/movie.html
+++ b/stuff/embed/movie.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Watch Movie</title>
   <link rel="stylesheet" href="../styles.css" />
-  <script src="stuff/js/movie.js" defer></script>
+  <script src="js/movie.js" defer></script>
   <style>
     .top-bar {
       display: flex;
