--- a/stuff/embed/tv.html
+++ b/stuff/embed/tv.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Watch TV Show</title>
   <link rel="stylesheet" href="../styles.css" />
-  <script src="stuff/js/tv.js" defer></script>
+  <script src="js/tv.js" defer></script>
   <style>
     .top-bar {
       display: flex;
