--- a/stuff/index.html
+++ b/stuff/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Search Movies & TV Shows</title>
   <link rel="stylesheet" href="stuff/styles.css" />
-  <script src="stuff/search.js" defer></script>
+  <script src="search.js" defer></script>
   <style>
     body {
       background-color: #121212;
