--- a/stuff/index.html
+++ b/stuff/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Search Movies & TV Shows</title>
-  <link rel="stylesheet" href="stuff/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
   <script src="search.js" defer></script>
   <style>
     body {
